# avengers-jarvis1

./: .env.example  .gitignore  .vercelignore  BRD.md  CAPABILITIES.md  DEPLOY.md  README.md  RELEASE_PLAN.md  SPEC.md  SYSTEM_DESIGN.md  docker-compose.dev.yml  fly.toml  package.json  pyproject.toml  render.yaml  vercel.json
api/: [[...path]].py  requirements.txt
config/agents/: catalog.yaml  content.yaml  inventory.yaml  markets.yaml  meetings.yaml  operations.yaml  reconciliation.yaml  research.yaml  security.yaml
config/connectors/: boltic.yaml  catalog_api.yaml  exa_search.yaml  fynd_oms.yaml  internal_rag.yaml  jiocommerce.yaml
config/policies/: block_writes.yaml  cite_every_claim.yaml  no_pii_to_external_search.yaml
config/tenants/: acme.yaml  fynd_internal.yaml  jarvis.yaml
evals/cases/research/: budget_cap.yaml  empty_digest_ok.yaml  happy_path.yaml
infra/docker/: Dockerfile.api  Dockerfile.worker
jarvis-desktop/: README.md  com.capbrij.jarvis.plist  intents.py  listener.py
memory/jarvis/: decisions.md  people.md  persona.md  projects.md  style.md
prompts/: catalog.md  inventory.md  reconciliation.md  research.md
src/avengers/: __init__.py  settings.py
tests/integration/: test_agent_loop.py  test_api.py  test_approval.py  test_config_e2e.py  test_deep_dive.py  test_evals.py  test_fynd_tenant.py  test_internal_rag.py  test_jarvis.py  test_memory_api.py  test_morning_brief.py  test_observability_wired.py  test_oidc.py  test_stream.py
tests/unit/: test_audit.py  test_audit_s3.py  test_budget.py  test_config_loader.py  test_identity_static.py  test_llm_router.py  test_memory.py  test_observability.py  test_openai_provider.py  test_policy.py  test_rbac.py  test_redact.py  test_schemas.py
web/: .gitignore  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vercel.json
web/app/: command-shell.tsx  globals.css  layout.tsx
web/lib/: api.ts  auth.ts  jarvis.ts  utils.ts  wake-word.ts
(+122 files in other folders)
