[project]
name = "avengers"
version = "0.1.0"
description = "Multi-tenant multi-agent daily-briefing and on-demand command platform."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "AVENGERS Platform Team" }]

dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "anyio>=4.3",
    "structlog>=24.1",
    "pyyaml>=6.0",
    "python-dateutil>=2.9",
    "tenacity>=8.2",
    "orjson>=3.9",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.34"]
bedrock = ["boto3>=1.34"]
openai = ["openai>=1.30"]
mcp = ["mcp>=1.0"]
postgres = ["asyncpg>=0.29", "sqlalchemy[asyncio]>=2.0"]
pgvector = ["pgvector>=0.2", "asyncpg>=0.29"]
temporal = ["temporalio>=1.6"]
observability = ["opentelemetry-sdk>=1.24", "opentelemetry-instrumentation-fastapi>=0.45"]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "respx>=0.21",
    "freezegun>=1.4",
    "mypy>=1.9",
    "ruff>=0.4",
]
dev = ["avengers[anthropic,bedrock,openai,mcp,postgres,temporal,observability,test]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/avengers"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
markers = [
    "integration: integration tests that require external services",
    "eval: agent eval-suite runs (slower, model-cost-bearing)",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC", "S", "RUF"]
ignore = ["S101"]  # pytest assert is fine

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
disallow_untyped_decorators = false
warn_unused_ignores = true
